[project]
name = "neural-nest-v1"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "brax>=0.14.2",
    "distrax>=0.1.8",
    "evosax>=0.2.0",
    "flashbax>=0.1.3",
    "flax>=0.12.7",
    "gymnax>=0.0.9",
    "jax>=0.2.26",
    "jaxlib>=0.1.74",
    "navix>=0.7.4",
    "numpy>=2.4.5",
    "optax>=0.2.8",
    "wandb>=0.27.0",
]

[dependency-groups]
dev = [
    "black>=26.5.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
